--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 *{
     margin: 0; padding: 0; box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
 body{
     height: 100vh;
@@ -9,35 +11,33 @@ body{
     background-color: #333;
 }
 .table{
-    border-radius: 5px;
+    border-top-left-radius: 25px;
+    border-bottom-right-radius: 25px;
     background-color: #000;
-    width: fit-content;
+    width: 270px;
     padding: 25px 15px;
     height: fit-content;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: .8fr 1fr 1fr 1fr;
-    grid-template-areas: "D D D D"
-                         "b b b o"
-                         "b b b o"
-                         "b b b o";
-    row-gap: 10px;
+   
 }
 .btn{
     width: 50px; height: 50px;
+    border-bottom: 1px solid #999;
+    border-right: 1px solid #999;
+    border-top-left-radius: 7px;
+    border-bottom-right-radius: 7px;
     display: flex;
-    border: none;
-    border-radius: 5px;
     align-items: center;
     justify-content: center;
     background-color: rgb(100, 100, 100);
     margin: 5px;
     cursor: pointer;
     color: #fff;
+    font-size: 1em;
     font-weight: 700;
 }
 .display{
-    grid-area: D;
+    height: 50px;
+    margin-bottom: 15px;
     border-radius: 5px;
     border-bottom: 1px solid #999;
     border-right: 1px solid #999;
@@ -49,18 +49,17 @@ body{
     color: #fff;
 }
 .buttons{
-    grid-area: b;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    display: flex;
     align-items: center;
+    flex-wrap: wrap;
 }
-.operadores{
-    grid-area: o;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+.operadores {
+    display: flex;
 }
 #res{
     background-color: green;
+    flex: 1 1 0%;
+}
+#eraser{
+    background-color: coral;
 }
