--- a/style.css
+++ b/style.css
@@ -21,10 +21,12 @@ body{
 }
 .btn{
     width: 50px; height: 50px;
-    border-bottom: 1px solid #999;
-    border-right: 1px solid #999;
-    border-top-left-radius: 7px;
-    border-bottom-right-radius: 7px;
+    /* border-bottom: 1px solid #999;
+    border-right: 1px solid #999; */
+    /* border-top-left-radius: 7px;
+    border-bottom-right-radius: 7px; */
+    outline: none;
+    border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -59,6 +61,7 @@ body{
 #res{
     background-color: green;
     flex: 1 1 0%;
+    border-radius: 50px;
 }
 #eraser{
     background-color: coral;
